[project]
name = "proxy-mc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folktables>=0.0.12",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prettytable>=3.17.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
